@@ -7,6 +7,7 @@ RECENT CHANGES
 ======
 
 * Fixed Issue #219 - db:import with no arguments throws PHP Warnings
+* sys:setup:run - Better error printing
 
 ======
 1.78.0
